crates/ink/tests/ui/abi/sol/fail/message-name-override-invalid2.stderr
error: `name` attribute argument value can only contain alphanumeric characters, underscores and dollar signs
  --> tests/ui/abi/sol/fail/message-name-override-invalid2.rs:14:31
   |
14 |         #[ink(message, name = "my-Message")]
   |                               ^^^^^^^^^^^^
